Replacing deprecated `new Integer` with `Integer.valueOf`
Just a Search/Replace operation. Maybe for literal and variable I should
remove the call to `Integer.valueOf` as well.

But that is quite a low priority task.