@@ -97,8 +97,8 @@ public class WorkItemInfoQueryResult implements LinkedQueryResultData {
         // Build up a list of unique ID's
         final Set idSet = new HashSet();
         for (int i = 0; i < links.length; i++) {
-            final Integer sourceId = new Integer(links[i].getSourceID());
-            final Integer targetId = new Integer(links[i].getTargetID());
+            final Integer sourceId = Integer.valueOf(links[i].getSourceID());
+            final Integer targetId = Integer.valueOf(links[i].getTargetID());
 
             if (sourceId.intValue() != 0 && !idSet.contains(sourceId)) {
                 idSet.add(sourceId);
